roughed out css and refined html

--- a/contact.html
+++ b/contact.html
@@ -14,24 +14,26 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h2>Emad Saadeh</h2>
+        <header>
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>Emad Saadeh</h1>
+                </div>
+                <div class="col-md-4">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="contact.html">Content</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-4">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Content</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        </header>
         <div class="row">
             <div class="col-md-12">
                 <h2>Contact</h2>
@@ -59,7 +61,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body foot">
                         <p>Copyright &copy</p>
                     </div>
                 </div>
