--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
         </header>
+        <article>
         <div class="row">
             <div class="col-md-12">
                 <h2>About Me</h2>
@@ -51,24 +52,22 @@
                     dolorem ipsum. Eos omnis quo impedit, expedita, nemo minima assumenda culpa nesciunt deserunt ipsam
                     repellendus sunt. Mollitia culpa incidunt excepturi doloribus facilis laborum nihil maiores
                     veritatis magnam. Deleniti adipisci et magnam, vero, accusamus placeat quis voluptatibus soluta
-                    beatae exercitationem tempora magni aut! Beatae, nesciunt. Voluptate architecto nam esse earum qui
-                    temporibus pariatur laboriosam dignissimos illo iure dolores reiciendis officiis corporis voluptas
-                    atque fugiat et, nisi ea quo molestiae quae. Delectus assumenda rerum quae. Vel, provident
-                    excepturi soluta quae sequi explicabo accusamus vero, suscipit nesciunt iste molestias voluptates
-                    impedit ut sint dolores sed rerum esse culpa. Nesciunt impedit veniam ut harum amet aliquid
-                    molestiae dolor rem tenetur, veritatis quo pariatur? Obcaecati aspernatur ab ullam explicabo
-                    dolorum enim, eligendi repellat!</p>
+                    beatae exercitatio</p>
             </div>
         </div>
+    </article>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-body foot">
-                        <p>Copyright &copy</p>
-                    </div>
+                    <footer>
+                        <div class="card-body">
+                            <p>Copyright &copy</p>
+                        </div>
+                    </footer>
                 </div>
             </div>
         </div>
+
     </div>
 
 
