--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     <div class="container">
         <header>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-4">
                     <h1>Emad Saadeh</h1>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link disabled" href="index.html">About</a>
@@ -34,6 +34,7 @@
                 </div>
             </div>
         </header>
+        <section class="gallery">
         <div class="row">
             <div class="col-md-12">
                 <h2>Portfolio</h2>
@@ -43,33 +44,36 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="http://place-hold.it/150x150?text=Image cap" class="rounded float-left" alt="...">
+                        <img src="http://place-hold.it/150x150?text=Image cap" class="img-fluid" alt="...">
                     </div>
                     <div class="col-md-4">
-                        <img src="http://place-hold.it/150x150?text=Image cap" class="rounded float-left" alt="...">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="http://place-hold.it/150x150?text=Image cap" class="rounded float-left" alt="...">
-                    </div>
-                    <div class="col-md-4">
-                        <img src="http://place-hold.it/150x150?text=Image cap" class="rounded float-left" alt="...">
+                        <img src="http://place-hold.it/150x150?text=Image cap" class="img-fluid" alt="...">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="http://place-hold.it/150x150?text=Image cap" class="rounded float-left" alt="...">
+                        <img src="http://place-hold.it/150x150?text=Image cap" class="img-fluid" alt="...">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="http://place-hold.it/150x150?text=Image cap" class="img-fluid" alt="...">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="http://place-hold.it/150x150?text=Image cap" class="img-fluid" alt="...">
                     </div>
                 </div>
             </div>
         </div>
+    </section>
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-body foot">
-                        <p>Copyright &copy</p>
-                    </div>
+                    <footer>
+                        <div class="card-body">
+                            <p>Copyright &copy</p>
+                        </div>
+                    </footer>
                 </div>
             </div>
         </div>
